@@ -1,3 +1,9 @@
+2017-06-30  Bastian Maerkisch  <bmaerkisch@web.de>
+
+	* src/win/wd2.cpp:  Fix center of rotation for enhanced text.  Snap
+	textbox coordinates to full pixels for vertical or horizontal
+	orientation.
+
 2017-06-27  Bastian Maerkisch  <bmaerkisch@web.de>
 
 	* src/win/wd2d.cpp:  Respect the antialiasing setting.  Always clear
